# rust-api

./: Cargo.toml
migrations/2021-12-18-161708_users/: up.sql
migrations/2021-12-18-223404_auth/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs  role_model.rs  user_model.rs
src/routes/: ipfs_route.rs  mod.rs  user_route.rs
src/services/: auth_service.rs  ipfs_service.rs  mod.rs
src/structs/: auth_struct.rs  mod.rs
