[package]
name = "rust-api"
version = "0.1.0"
authors = ["claycode <claycodedev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
jsonwebtoken = "=7.2"
chrono = "0.4"
sha3 = "0.9"
rust-argon2 = "0.8.3"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]